# GUIprimes1

./: CMakeLists.txt  GUIprimes.cpp  GUIprimes.rc  GUIprimes.sln  GUIprimes.vcxproj  GUIprimes.vcxproj.filters  README.md  Resource.h  cApp.cpp  cApp.h  cMain.cpp  cMain.h  messages.cpp  messages.h  utility.cpp  utility.h
